--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,10 @@ dependencies:
 flutter_icons:
   android: "launcher_icon"    
   ios: true    
-  image_path: "assets/icon/info.png"
+  image_path: "assets/icons/infonow.png"
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
@@ -63,6 +64,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+     - assets/
+     - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
