--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.1.2
+  web_socket_channel: ^2.0.0
 
 flutter_icons:
   android: "launcher_icon"    
   ios: true    
-  image_path: "assets/icons/infonow.png"
+  image_path: "assets/icons/about.png"
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
